--- a/django_portion/templates/django_portion/base.html
+++ b/django_portion/templates/django_portion/base.html
@@ -15,12 +15,14 @@
   <link rel="stylesheet" href="{% static 'django_portion/style.css' %}">
 </head>
 
-<body class="flex flex-col min-h-screen bg-white-100 dark:bg-gray-900">
+<body class="flex flex-col min-h-screen dark:bg-slate-950">
   <div class="flex-grow">
     <header>
-      <nav class="sticky top-0 z-50 flex items-center justify-between flex-wrap dark:bg-gray-800 bg-gray-300 p-3">
-        <div class="flex items-center flex-shrink-0 dark:text-white mr-6">
-          <a href="{% url 'blog_index' %}" class="font-bold text-5xl tracking-tight">🌌</a>
+      <nav class="sticky top-0 z-30 flex items-center justify-between flex-wrap dark:bg-slate-800 bg-gray-300 p-3">
+        <div class="max-w-5xl mx-auto px-4 flex-shrink-0 dark:text-white mr-6">
+          <div class="flex items-center justify-between h-16">
+            <a href="{% url 'blog_index' %}" class="font-bold text-5xl tracking-tight">🌌</a>
+          </div>
         </div>
         <div class="block lg:hidden" id="menu-toggle-container">
           <button id="menu-toggle"
@@ -33,19 +35,22 @@
         </div>
         <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto hidden text-center lg:text-right"
           id="menu">
-          <div class="text-md lg:flex-grow">
+          <div class="text-md space-x-6 lg:flex-grow">
             <a href="/"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 mr-4">Portfolio</a>
+              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Portfolio</a>
             <a href="{% url 'blog_index' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 mr-4">Blog</a>
+              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Blog</a>
             <a href="{% url 'about_me' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 mr-4">About</a>
+              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">About</a>
+
             <a href="{% url 'resume' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 mr-4">Resume</a>
-            <a href="{% url 'skills_index' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 mr-4">Skills</a>
+              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Resume</a>
+            <!--
+                <a href="{% url 'skills_index' %}"
+                class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Skills</a>
+              -->
             <a href="{% url 'contact' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 mr-4">Contact</a>
+              class="block mt-4 pr-6 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Contact</a>
           </div>
         </div>
       </nav>
@@ -56,7 +61,7 @@
       {% endblock %}
     </main>
   </div>
-  <footer class="dark:bg-gray-800 bg-gray-300 font-medium w-full">
+  <footer class=" dark:bg-gray-800 bg-gray-300 font-medium w-full">
     <div class="max-w-6xl mx-auto px-4 py-6 sm:px-6 lg:px-8">
       <div class="text-center">
         <p class="text-sm md:text-base">© 2024 John R. Molina. All rights reserved.</p>
