--- a/django_portion/templates/django_portion/base.html
+++ b/django_portion/templates/django_portion/base.html
@@ -15,42 +15,42 @@
   <link rel="stylesheet" href="{% static 'django_portion/style.css' %}">
 </head>
 
-<body class="flex flex-col min-h-screen dark:bg-slate-950">
+<body
+  class="flex flex-col min-h-screen dark:bg-gradient-to-b dark:from-slate-950 dark:to-slate-800 bg-gradient-to-t from-neutral-200 to-neutral-100">
   <div class="flex-grow">
     <header>
-      <nav class="sticky top-0 z-30 flex items-center justify-between flex-wrap dark:bg-slate-800 bg-gray-300 p-3">
-        <div class="max-w-5xl mx-auto px-4 flex-shrink-0 dark:text-white mr-6">
+      <nav
+        class="sticky top-0 z-10 flex items-center justify-between flex-wrap bg-gradient-to-tr from-celestialblue-700 to-indigo-400 border-slate-950 dark:bg-gradient-to-tr dark:from-celestialblue-100 dark:to-indigo-950 border-b-2 dark:border-slate-950 text-cyan-50">
+        <div class="max-w-5xl mx-auto px-4 flex-shrink-0 mr-4">
           <div class="flex items-center justify-between h-16">
-            <a href="{% url 'blog_index' %}" class="font-bold text-5xl tracking-tight">🌌</a>
+            <a href="{% url 'blog_index' %}" class="font-bold text-5xl tracking-tight" alt="blog">🌌</a>
           </div>
         </div>
-        <div class="block lg:hidden" id="menu-toggle-container">
+        <div class="flex-none block lg:hidden pr-4" id="menu-toggle-container">
           <button id="menu-toggle"
-            class="flex items-center px-3 py-2 border rounded text-pastelgreen-400 border-pastelgreen-400 hover:text-celestialblue-700 hover:border-celestialblue-700">
-            <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            class="flex items-center px-2 py-2 border-2 rounded text-success border-success hover:text-indigo-800 hover:border-indigo-800">
+            <svg class="fill-current h-4 w-4" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <title>Menu</title>
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
             </svg>
           </button>
         </div>
-        <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto hidden text-center lg:text-right"
-          id="menu">
-          <div class="text-md space-x-6 lg:flex-grow">
+        <div class="w-full block flex-grow lg:flex lg:w-auto text-center md: text-center sm:text-right" id="menu">
+          <div class="flex-1 text-lg pr-5 space-x-3 lg:flex-grow">
             <a href="/"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Portfolio</a>
+              class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700">Portfolio</a>
             <a href="{% url 'blog_index' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Blog</a>
+              class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700 ">Blog</a>
             <a href="{% url 'about_me' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">About</a>
-
+              class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700 ">About</a>
             <a href="{% url 'resume' %}"
-              class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Resume</a>
+              class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700 ">Resume</a>
             <!--
                 <a href="{% url 'skills_index' %}"
                 class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Skills</a>
               -->
             <a href="{% url 'contact' %}"
-              class="block mt-4 pr-6 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Contact</a>
+              class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700">Contact</a>
           </div>
         </div>
       </nav>
@@ -61,18 +61,16 @@
       {% endblock %}
     </main>
   </div>
-  <footer class=" dark:bg-gray-800 bg-gray-300 font-medium w-full">
+  <footer
+    class="bg-gradient-to-bl from-indigo-400 to-celestialblue-700 border-slate-950 dark:bg-gradient-to-bl dark:from-celestialblue-100 dark:to-indigo-950 border-t-2 dark:border-slate-950 dark:text-cyan-50 w-full ">
     <div class="max-w-6xl mx-auto px-4 py-6 sm:px-6 lg:px-8">
       <div class="text-center">
         <p class="text-sm md:text-base">© 2024 John R. Molina. All rights reserved.</p>
         <p class="text-sm md:text-base">Made with React, Django, TailwindCSS, and a whole lot of ❤️‍🔥</p>
-        <div class="space-x-4 md:justify-start md:space-x-6 mt-4">
-          <a href="https://twitter.com/rich_txt_editor" target="_blank"
-            class="dark:text-platinum-400 hover:text-celestialblue-700">Twitter</a>
-          <a href="https://github.com/rich_txt_editor" target="_blank"
-            class="dark:text-platinum-400 hover:text-celestialblue-700">GitHub</a>
-          <a href="https://linkedin.com/in/jrmolin90" target="_blank"
-            class="dark:text-platinum-400 hover:text-celestialblue-700">LinkedIn</a>
+        <div class="space-x-4 md:justify-start md:space-x-6 mt-4 ">
+          <a href="https://twitter.com/rich_txt_editor" target="_blank" class="hover:text-celestialblue-700">Twitter</a>
+          <a href="https://github.com/rich_txt_editor" target="_blank" class="hover:text-celestialblue-700">GitHub</a>
+          <a href="https://linkedin.com/in/jrmolin90" target="_blank" class="hover:text-celestialblue-700">LinkedIn</a>
         </div>
       </div>
     </div>
