--- a/django_portion/templates/django_portion/blog_detail.html
+++ b/django_portion/templates/django_portion/blog_detail.html
@@ -68,7 +68,7 @@
   </div>
 
   <!-- Tags container as a separate, thinner box on the right -->
-  <div class="w-auto lg:w-1/6 mt-8 md:mt-8 lg:mt-">
+  <div class="max-w-fit lg:w-1/6 mt-8 md:mt-8">
     <h2 class="text-center text-2xl font-semibold text-gray-800 dark:text-white mb-4">Tags</h2>
     <div class="bg-gray-100 dark:bg-gray-700 p-4 rounded-lg shadow">
       <ul class="list-none text-center space-y-2">
