--- a/django_portion/templates/django_portion/blog_index.html
+++ b/django_portion/templates/django_portion/blog_index.html
@@ -7,26 +7,27 @@
   <div class="post-content flex-grow pr-8">
     <h1 class="text-4xl font-bold text-gray-800 dark:text-white mb-6">Blog</h1>
     <div class="space-y-4">
-        {% for post in posts %}
-        <!-- Individual post container with margin to prevent line touching the tags box -->
-        <div class="border-b pb-4 mb-4 border-gray-200 dark:border-gray-700">
-            <h2 class="text-2xl font-semibold text-blue-500 hover:text-blue-600 dark:hover:text-blue-400">
-              <a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a>
-            </h2>
-            <p class="text-sm text-gray-600 dark:text-gray-400">Posted on {{ post.created_on|date:"F d, Y" }}</p>
-        </div>
-        {% endfor %}
+      {% for post in posts %}
+      <!-- Individual post container with margin to prevent line touching the tags box -->
+      <div class="border-b pb-4 mb-4 border-gray-200 dark:border-gray-700">
+        <h2 class="text-2xl font-semibold text-blue-500 hover:text-blue-600 dark:hover:text-blue-400">
+          <a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a>
+        </h2>
+        <p class="text-sm text-gray-600 dark:text-gray-400">Posted on {{ post.created_on|date:"F d, Y" }}</p>
+      </div>
+      {% endfor %}
     </div>
   </div>
 
   <!-- Tags container as a separate, thinner box on the right -->
-  <div class="w-auto lg:w-1/6 mt-8 md:mt-8 lg:mt-">
+  <div class="w-fit lg:w-1/6 mt-8 md:mt-8 lg:mt-">
     <h2 class="text-center text-2xl font-semibold text-gray-800 dark:text-white mb-4">Tags</h2>
     <div class="bg-gray-100 dark:bg-gray-700 p-4 rounded-lg shadow">
       <ul class="list-none text-center space-y-2">
         {% for tag in tags_with_counts %}
         <li>
-          <a class="text-lg text-celestialblue-500 hover:text-celestialblue-700" href="{% url 'blog_by_tag' tag.name %}">
+          <a class="text-lg text-celestialblue-500 hover:text-celestialblue-700"
+            href="{% url 'blog_by_tag' tag.name %}">
             {{ tag.name }} ({{ tag.count }})
           </a>
         </li>
