--- a/django_portion/templates/django_portion/contact.html
+++ b/django_portion/templates/django_portion/contact.html
@@ -2,9 +2,8 @@
 
 {% block content %}
 
-<div class="container mx-auto px-4 py-8 md:flex">
-
-  <div class="post-content flex-grow pr-8">
+<div class="container m-auto p-4 md:flex">
+  <div class="flex-grow">
     <h1 class="text-5xl font-bold text-gray-800 dark:text-white mb-6">Contact Me</h1>
     <div class="space-y-8">
       <h3>If you have any questions or would like to work on something together, feel free to contact me through the
