--- a/django_portion/templates/django_portion/base.html
+++ b/django_portion/templates/django_portion/base.html
@@ -7,11 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}My Portfolio{% endblock %}</title>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="csp-nonce" content="{{ request.nonce }}">
+
+
   {% tailwind_preload_css %}
   {% tailwind_css %}
 
-  <link rel="shortcut icon" href="{% static '/django_portion/favicon.ico' %}">
-  <link rel="stylesheet" href="{% static 'django_portion/style.css' %}">
+  <link rel="shortcut icon" href="{% static '/django_portion/favicon.ico' %}" nonce="{{ request.nonce }}">
+  <link rel="stylesheet" href="{% static 'django_portion/style.css' %}" nonce="{{ request.nonce }}">
 
 </head>
 
@@ -20,7 +23,7 @@
   <div class="flex-grow">
     <header>
       <nav
-        class="sticky top-0 z-10 flex items-center justify-between border-b-2 flex-wrap bg-gradient-to-r from-celestialblue-800 to-indigo-600 border-slate-950 dark:border-slate-700 dark:bg-gradient-to-tr dark:from-celestialblue-200 dark:to-indigo-950 text-cyan-50">
+        class="sticky top-0 z-10 flex items-center justify-between border-b-2 flex-wrap bg-gradient-to-r from-celestialblue-800 to-indigo-600 border-slate-950 dark:border-slate-700 dark:bg-gradient-to-tr dark:from-celestialblue-200 dark:to-indigo-900 text-cyan-50">
         <div class="max-w-5xl mx-auto px-4 flex-shrink-0 mr-4">
           <div class="flex items-center justify-between h-16">
             <a href="{% url 'blog_index' %}" class="font-bold text-5xl tracking-tight" alt="blog">🌌</a>
@@ -45,10 +48,6 @@
               class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700 ">About</a>
             <a href="{% url 'resume' %}"
               class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700 ">Resume</a>
-            <!--
-                <a href="{% url 'skills_index' %}"
-                class="block mt-4 lg:inline-block lg:mt-0 dark:text-platinum-400 hover:text-celestialblue-700 ">Skills</a>
-              -->
             <a href="{% url 'contact' %}"
               class="block lg:inline-block lg:mt-0 dark:text-platinum-500 hover:text-celestialblue-700">Contact</a>
           </div>
@@ -62,12 +61,12 @@
     </main>
   </div>
   <footer
-    class="text-platinum-500 bg-gradient-to-bl from-indigo-400 to-celestialblue-700 border-slate-950 dark:bg-gradient-to-bl dark:from-celestialblue-100 dark:to-indigo-950 border-t-2 dark:border-slate-900 dark:text-cyan-50 w-full text-lg">
+    class="text-platinum-500 bg-gradient-to-bl from-celestialblue-600 to-indigo-700 border-slate-950 dark:bg-gradient-to-l dark:from-celestialblue-200 dark:to-indigo-900 border-t-2 dark:border-slate-900 dark:text-cyan-50 w-full text-lg">
     <div class="max-w-6xl mx-auto px-4 py-6 sm:px-6 lg:px-8">
       <div class="text-center">
         <p>© 2024 John R. Molina. All rights reserved.</p>
         <p>Made with React, Django, Tailwind, and a whole lot of ❤️‍🔥</p>
-        <div class="space-x-4 md:justify-start md:space-x-6 mt-4 ">
+        <div class="space-x-4 md:justify-start md:space-x-6 mt-4">
           <a href="https://twitter.com/rich_txt_editor" target="_blank" class="hover:text-celestialblue-700">Twitter</a>
           <a href="https://github.com/rich_txt_editor" target="_blank" class="hover:text-celestialblue-700">GitHub</a>
           <a href="https://linkedin.com/in/jrmolin90" target="_blank" class="hover:text-celestialblue-700">LinkedIn</a>
@@ -75,9 +74,7 @@
       </div>
     </div>
   </footer>
-  <script defer src="{% static '/django_portion/base.js' %}"></script>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-
+  <script defer src="{% static '/django_portion/base.js' %}" nonce="{{ request.nonce }}"></script>
 </body>
 
 </html>
