prepare for deployment

--- a/django_portion/templates/django_portion/base.html
+++ b/django_portion/templates/django_portion/base.html
@@ -19,7 +19,7 @@
 </head>
 
 <body
-  class="flex flex-col min-h-screen dark:bg-gradient-to-b dark:from-slate-950 dark:to-slate-800 bg-gradient-to-t from-neutral-200 to-neutral-100">
+  class="flex flex-col min-h-screen bg-gradient-to-t from-neutral-200 to-neutral-100 dark:bg-gradient-to-b dark:from-slate-950 dark:to-slate-800">
   <div class="flex-grow">
     <header>
       <nav
@@ -56,7 +56,7 @@
     </header>
     <main>
       {% block content %}
-      <!--React Content is injected here-->
+      <!-- Main content injected here -->
       {% endblock %}
     </main>
   </div>
