--- a/django_portion/templates/django_portion/index.html
+++ b/django_portion/templates/django_portion/index.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block content %}
-<div class="text-5xl text-center text-semibold p-10">
-    <h1>My recent projects</h1>
+<div class="text-center text-5xl font-semibold py-10 text-neutral-100">
+    <h1>Recent Projects</h1>
 </div>
-<div class="carousel carousel-center pb-16 bg-transparent max-w-fit mx-auto">
+<div class="carousel pb-16 bg-transparent mx-auto">
     {% for project in display_items.projects %}
-    <div
-        class="carousel-item bg-gradient-to-t from-transparent to-neutral-100 dark:bg-gradient-to-b dark:from-transparent dark:to-inherit text-slate-700 dark:text-neutral-50 m-5 rounded-lg max-w-lg">
-        <div class="card card-compact shadow-xl">
+    <div class="carousel-item mx-auto p-4 flex flex-wrap justify-center sm:min-w-xl">
+        <div
+            class="bg-transparent dark:bg-gradient-to-t dark:from-transparent dark:to-inherit text-slate-700 dark:text-neutral-50 rounded-lg shadow-xl max-w-xl  w-full">
             <figure>
                 <img class="rounded-lg w-full object-cover max-h-96 mb-8" src="{{ project.images.first.image.url }}"
                     alt="{{ project.title }}">
@@ -40,4 +40,5 @@
     </div>
     {% endfor %}
 </div>
+
 {% endblock %}
