--- a/django_portion/templates/django_portion/about_me.html
+++ b/django_portion/templates/django_portion/about_me.html
@@ -8,7 +8,7 @@
         <div id='hoverimg' class="w-60 rounded-full ring ring-indigo-400 ring-7 hover:ring-sky-600">
           <a href="{% url 'contact' %}"><img
               class="mx-auto h-40 w-40 rounded-full xl:w-56 xl:h-56 object-cover hover:blur-sm"
-              src="{{ MEDIA_URL }}/img/copy.png" alt="me"></a>
+              src="{{ MEDIA_URL }}/img/copy.webp" alt="me"></a>
 
         </div>
       </div>
