--- a/django_portion/templates/django_portion/base.html
+++ b/django_portion/templates/django_portion/base.html
@@ -72,7 +72,7 @@
         <p class="text-2xl">❤️‍🔥</p>
         <div class="space-x-4 md:justify-start md:space-x-6 m-2 text-xl">
           <a href="https://twitter.com/rich_txt_editor" target="_blank" class="hover:text-celestialblue-700">Twitter</a>
-          <a href="https://github.com/rich_txt_editor" target="_blank" class="hover:text-celestialblue-700">GitHub</a>
+          <a href="https://github.com/rich-txt-editor" target="_blank" class="hover:text-celestialblue-700">GitHub</a>
           <a href="https://linkedin.com/in/jrmolin90" target="_blank" class="hover:text-celestialblue-700">LinkedIn</a>
         </div>
       </div>
