fix index header

--- a/django_portion/templates/django_portion/index.html
+++ b/django_portion/templates/django_portion/index.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="text-center text-4xl font-semibold mt-32 pt-5 text-neutral-100">
-    <h1>Recent Projects</h1>
+<div class="text-center text-4xl font-semibold mt-32 pt-5 dark:text-neutral-100">
+    <h1>Coding Projects Portfolio</h1>
 </div>
 <div class="relative overflow-hidden w-full mx-auto responsive-carousel">
     <!-- Left Scroll Button -->
