fix portfolio header

--- a/django_portion/templates/django_portion/index.html
+++ b/django_portion/templates/django_portion/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="card-actions justify-end">
                         <a href="{{ project.repo_link }}"
-                            class="repo-link btn inline-flex items-center justify-center px-4 py-2 dark:bg-gradient-to-r from-celestialblue-300 to-celestialblue-400 rounded-lg text-neutral-200 mt-4">
+                            class="repo-link btn inline-flex items-center justify-center px-4 py-2 bg-gradient-to-r from-celestialblue-300 to-celestialblue-400 rounded-lg text-neutral-200 mt-4">
                             Visit Github Repo
                         </a>
                     </div>
